# greatapi

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  getting_started.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: linter.yml  publish_pypi.yml  publish_test_pypi.yml
docs/: conf.py  index.rst
docs/source/api/: multiplication.rst
greatapi/: __init__.py  config.py  helloworld.py  multiplication.py
greatapi/admin/: sites.py
greatapi/admin/static/: main.js
greatapi/admin/template/: base.html
greatapi/admin/template/dashboard/: delete_user.html  group.html
greatapi/admin/templates/: base.html  navbar.html  sidebar.html
greatapi/admin/templates/authentication/: login.html
greatapi/admin/templates/dashboard/: account.html  add_item.html  delete_user.html  group.html  history.html  index.html  items.html  settings.html  visualization.html
greatapi/commands/: __init__.py  createsuperuser.py  runserver.py  startapp.py  startproject.py
greatapi/conf/app_template/: models.py-tpl  router.py-tpl
greatapi/conf/project_template/: main.py  main.py-tpl
greatapi/conf/project_template/project_name/: __init__.py  __init__.py-tpl  settings.py-tpl
greatapi/core/: __init__.py
greatapi/core/auth/: hashing.py  schemas.py  sites.py
greatapi/core/history/: repository.py  schemas.py  sites.py
greatapi/core/test_auth/: sites.py
greatapi/core/users/: query.py  schemas.py  sites.py
greatapi/db/: database.py
greatapi/db/admin/: __init__.py  default.py  user.py
greatapi/db/models/: __init__.py  admin.py  default.py  user.py
greatapi/repositories/auth/: hashing.py  jwt_token.py
greatapi/repositories/users/: user.py
greatapi/routers/: admin.py  auth.py  index.py  user.py
greatapi/schemas/: auth.py  user.py
greatapi/static/: styles.css
greatapi/templates/admin/: base.html  navbar.html  sidebar.html
greatapi/templates/admin/authentication/: login.html
greatapi/templates/admin/dashboard/: account.html  add_item.html  delete_user.html  group.html  history.html  index.html  items.html  settings.html  visualization.html
greatapi/templates/startproject/: logger.py  main.py
greatapi/templates/startproject/project_name/: settings.py
greatapi/utils/: cbv.py  component.py  inferring_router.py  management.py  urls.py
tests/: __init__.py  multiplication_test.py  multiplication_tests.py  test_multiplication.py
