[metadata]
name = greatapi
version = 0.0.4
description = Full stack FastAPI Framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/greatapi/greatapi
author = Sahaj Raj Malla
author_email = mallasahajraj@gmail.com
license = GPL-2.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = greatapi
install_requires =
    fastapi
    numpy
    typer
    uvicorn
    sqlalchemy
    passlib
    python-jose
    jinja2
    python-multipart
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    greatapi = greatapi.commands:app

[options.extras_require]
dev =
    pytest

[options.package_data]
greatapi.resources =
    *.tar.gz
    empty_template_*
    hook-tmpl

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = greatapi/resources/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
