[metadata]
name = greatapi
version = 1.0.0
description = GreatAPI framework, Full stack FastAPI framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sahajrajmalla/greatapi
author = Sahaj Raj Malla
author_email = mallasahajraj@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
install_requires =
    fastapi>=0.78.0,<0.79.0
    jinja2>=2.11.2,<4.0.0
    passlib[bcrypt]>=1.7.2,<2.0.0
    pre-commit>=2.17.0,<3.0.0
    python-jose[cryptography]>=3.3.0,<4.0.0
    python-multipart>=0.0.5,<0.0.6
    sqlalchemy>=1.3.18,<1.5.0
    typer>=0.4.1,<0.5.0
    uvicorn[standard]>=0.12.0,<0.18.0
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    greatapi = greatapi.commands:app

[options.extras_require]
dev =
    pytest

[options.package_data]
greatapi.admin.static =
    *.css
    *.js
    *.svg
    *.ico
greatapi.admin.templates =
    *.html
greatapi.admin.templates.authentication =
    *.html
greatapi.admin.templates.dashboard =
    *.html
greatapi.conf.app_template =
    *.py-tpl
greatapi.conf.project_template =
    *.py-tpl
greatapi.conf.project_template.project_name =
    *.py-tpl
greatapi.resources =
    *.tar.gz
    empty_template_*
    hook-tmpl

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = greatapi/resources/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
